--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -3,12 +3,18 @@
 }
 .bars {
   background-color: #34495e;
+  margin: auto;
+  width: 80%;
+}
+.container {
+  background-color: #34495e;
   margin: auto -16px;
+  
 }
 .bars button:hover {
   color: #fff;
   font-family: "McLaren", cursive;
-  font-size: 18px;
+  font-size: 20px;
   padding: 15px 21px;
   line-height: 23px;
   font-weight: 200;
@@ -19,5 +25,6 @@
   color: #fff;
   font-family: "McLaren", cursive;
   border: 0px;
+  font-size: 18px;
   background-color: #34495e;
 }
